added speech to text feature credits to karunesh

--- a/client/style.css
+++ b/client/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-  background: #343541;
+  background: #fff;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #fff;
 
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@ body {
 }
 
 .ai {
-  background: #40414F;
+  background: #fff;
 }
 
 .chat {
@@ -89,7 +89,7 @@ body {
 .message {
   flex: 1;
 
-  color: #dcdcdc;
+  color: #000;
   font-size: 20px;
 
   max-width: 100%;
@@ -117,7 +117,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #40414F;
+  background: #fff;
 
   display: flex;
   flex-direction: row;
@@ -127,7 +127,7 @@ form {
 textarea {
   width: 100%;
 
-  color: #fff;
+  color: #000;
   font-size: 18px;
 
   padding: 10px;
